# plasma_applet_athkar

./: CMakeLists.txt  README  README.md  kde-plasma-athkar.spec  plasma_applet_athkar.desktop
data/: hisnmuslim.db
form/: configform.ui  dbform.ui  voiceform.ui  wathakkerform.ui
po/: CMakeLists.txt  ar.po  extract-messages.sh  fr.po  plasma_applet_athkar.pot
src/: athkar.cpp  athkar.h  database.cpp  database.h  hisnmuslim.cpp  hisnmuslim.h  install.sh  voice.cpp  voice.h  wathakker.cpp  wathakker.h
